Sets the current directory to the process directory at startup.  This is to avoid a potential problem with embedding applications calling ShellExecute where the working directory parameter.  This results in the new process inheriting the current working directory of the old process.  See bug 202363.  r=wtc@netscape.com, a=asa@mozilla.org